Fixed armadillos to run away from players and not attack.

--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -2700,6 +2700,44 @@
     <Content Include="bin\Immersion\assets\immersion\textures\block\dead\rooster.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\block\dead\she-wolf.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\block\dead\sow.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\large\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\large\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\large\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\large\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\large\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\large\whitecurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\medium\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\medium\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\medium\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\medium\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\medium\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\medium\whitecurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\small.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\dry\small\whitecurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\large\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\large\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\large\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\large\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\large\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\large\whitecurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\medium\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\medium\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\medium\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\medium\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\medium\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\medium\whitecurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\blackcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\blueberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\cranberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\raspberry.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\redcurrant.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\saguaro.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\block\dryingmat\fresh\small\whitecurrant.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\block\fire.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\block\flora\palm\frond.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\block\flora\palm\fruits.png" />
@@ -3024,6 +3062,9 @@
     <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\basalt1.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\basalt2.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\basalt3.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\bauxite1.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\bauxite2.png" />
+    <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\bauxite3.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\chalk1.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\chalk2.png" />
     <Content Include="bin\Immersion\assets\immersion\textures\crackedblock\stone\brick\chalk3.png" />
