--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -248,7 +248,6 @@
     <Folder Include="bin\Immersion\assets\immersion\textures\block\stone\roads\stones\" />
     <Folder Include="bin\Totems\assets\totems\recipes\clayforming\" />
     <Folder Include="Source\Content\Entity\" />
-    <Folder Include="WIPAssets\GitAssets\" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitattributes" />
@@ -3465,6 +3464,7 @@
     <Content Include="bin\Totems\assets\totems\textures\item\offering-bowl\fruit.png" />
     <Content Include="bin\Totems\assets\totems\textures\item\offering-bowl\meat.png" />
     <Content Include="bin\Totems\assets\totems\textures\item\offering-bowl\vegetable.png" />
+    <Content Include="WIPAssets\GitAssets\wiki-logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="packages\Microsoft.CodeAnalysis.VersionCheckAnalyzer.2.9.6\analyzers\dotnet\cs\Microsoft.CodeAnalysis.VersionCheckAnalyzer.resources.dll" />
