--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Source\Systems\WorldGen\GenRivers.cs" />
     <Compile Include="Source\Systems\WorldGen\GenDeepOreBits.cs" />
     <Compile Include="Source\Systems\WorldGen\GenAquifers.cs" />
+    <Compile Include="Source\Systems\WorldGen\MapLayers\MapLayerRidged.cs" />
     <Compile Include="Source\Systems\WorldGen\ModifyLakes.cs" />
     <Compile Include="Source\Debugging\RedirectLogs.cs" />
     <Compile Include="Source\Content\BlockEntities\BEPalmTree.cs" />
@@ -187,6 +188,7 @@
     <Compile Include="Source\Systems\ReturnBlockTest.cs" />
     <Compile Include="Source\ImmersionSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\Systems\WorldGen\RidgedNoise.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Immersion\assets\game\blocktypes\testing\" />
